External Link in new Tab

--- a/projects/npe.html
+++ b/projects/npe.html
@@ -31,8 +31,8 @@
                 <div class="links">
                     <h1>Not Paid Enough!</h1>
                     <div class="socials">
-                        <a href="https://github.com/iTschoCapic"><img src="../resources/images/logo/GitHub.png" alt="GitHub Logo"></a>
-                        <a href="https://www.linkedin.com/in/renaud-machecourt-bourgeois/"><img src="../resources/images/logo/LinkedIn.png" alt="LinkedIn Logo"></a>
+                        <a href="https://github.com/iTschoCapic" target="_blank"><img src="../resources/images/logo/GitHub.png" alt="GitHub Logo"></a>
+                        <a href="https://www.linkedin.com/in/renaud-machecourt-bourgeois/" target="_blank"><img src="../resources/images/logo/LinkedIn.png" alt="LinkedIn Logo"></a>
                         <a href="mailto:renaud.mb.58@gmail.com"><img src="../resources/images/logo/Gmail.png" alt=""></a>
                         <a href="../resources/MACHECOURT-BOURGEOIS_Renaud-Curriculum-Vitae.pdf" download><img src="../resources/images/logo/cv2.png" alt=""></a>
                     </div>
@@ -80,8 +80,8 @@
         <footer>
             <div class="contacts">
                 <h2>Contact:</h2>
-                <div class="github"><a href="https://github.com/iTschoCapic"><img src="../resources/images/logo/GitHub.png" alt="GitHub Logo"></a></div>
-                <div class="linkedin"><a href="https://www.linkedin.com/in/renaud-machecourt-bourgeois/"><img src="../resources/images/logo/LinkedIn.png" alt="LinkedIn Logo"></a></div>
+                <div class="github"><a href="https://github.com/iTschoCapic" target="_blank"><img src="../resources/images/logo/GitHub.png" alt="GitHub Logo"></a></div>
+                <div class="linkedin"><a href="https://www.linkedin.com/in/renaud-machecourt-bourgeois/" target="_blank"><img src="../resources/images/logo/LinkedIn.png" alt="LinkedIn Logo"></a></div>
                 <div class="mail"><a href="mailto:renaud.mb.58@gmail.com"><img src="../resources/images/logo/Gmail.png" alt=""></a></div>
                 <div class="curriculum-vitae"><a href="../resources/MACHECOURT-BOURGEOIS_Renaud-Curriculum-Vitae.pdf" download><img src="../resources/images/logo/cv2.png" alt=""></a></div>
             </div>
