Bold projects links

--- a/projects/geomod.html
+++ b/projects/geomod.html
@@ -62,7 +62,7 @@
         <main>
             <h2>Adaptative Octree Algorithm for 3D volumetric representation of spheres using spatial enumeration</h2>
             <p>I achieved this during the course named "Geometrical Modelisation". We most of the time work on rendering shapes and models in 3D and then apply algorithm to them. It can range from calculating vertices, triangles and normals to render a model, to mesh simplification and subdivision.</p>
-            <p><a href="https://github.com/iTschoCapic/modelisation_geometrique">GitHub repository</a> of the project</p>
+            <p><b><a href="https://github.com/iTschoCapic/modelisation_geometrique">GitHub repository</a> of the project</b></p>
             </p>
             <h3>Bounding Boxes</h3>
                 <p><i>This method generates a bounding box for a given sphere in 3D space. A bounding box is the smallest axis-aligned rectangular box that completely encloses the sphere, useful for optimizing collision detection and spatial queries in 3D applications. The method takes a Sphere object as input, which includes the sphere'ws center (sphere.position) and its radius (sphere.radius).</i></p>
