--- a/projects/lecastellcanet.html
+++ b/projects/lecastellcanet.html
@@ -51,6 +51,7 @@
         <main>
             <h2>Internship Summary: Development of a Website for Le Castell Canet</h2>
             <p>During my internship, I successfully designed and developed a complete website for the restaurant Le Castell Canet, handling the project from initial conception to final deployment. The primary objective was to enhance the restaurant's online presence and improve its accessibility for both local and international audiences.</p>
+            <p><b><a href="https://lecastellcanet.fr/">Website</a> of Le Castell Canet.</b></p>
             <h3>Key Achievements</h3>
             <p>Wireframing and Prototyping: Designed the website structure and user interface to align with the client's vision.</p>
             <p>Frontend Development: Created a responsive and user-friendly interface using HTML, CSS, and JavaScript, ensuring compatibility across devices.</p>
