--- a/projects/npe.html
+++ b/projects/npe.html
@@ -11,6 +11,7 @@
         <link rel="manifest" type="application/manifest+json" href="./resources/icons/icons.webmanifest">
         <link rel="icon" href="./resources/images/logo/" type="image/x-icon">
         <script src="../stars.js"></script>
+        <script src="../t.js"></script>
     </head>
     <body>
         <div class="header" id="header">
@@ -56,7 +57,7 @@
             <h2>Not Paid Enough!</h2>
             <p>Not Paid Enough! is an exciting and highly engaging asymmetrical multiplayer party game that is currently in development by a dedicated team of 15 passionate and talented level designers, 3d graphic designers and game developers including myself. Designed specifically for PC, this game aims to provide a unique blend of humor, strategic gameplay, and chaotic moments, all set within the infamous and mysterious confines of Area 51.</p>
             <!-- <p><a href="https://github.com/iTschoCapic/modelisation_geometrique">GitHub repository</a> of the project</p> -->
-             <p>Dont forget to check the <a href="https://www.linkedin.com/company/goober-studio/">LinkedIn</a> of our project!</p>
+             <p><b>Dont forget to check the <a href="https://www.linkedin.com/company/goober-studio/">LinkedIn</a> of our project!</b></p>
             </p>
             <h3>Overview</h3>
                 <p>In this game, one player assumes the role of an alien janitor, a prisoner trapped in the top-secret military facility and forced to clean the premises under the watchful eyes of their captors. Meanwhile, up to three conspiracy theorists, convinced that extraterrestrial life exists, infiltrate the base in an attempt to gather undeniable proof of alien existence. As the janitor, your goal is to maintain the cleanliness of the facility while preventing the intruders from uncovering secrets and making a mess. On the other hand, the conspiracy theorists must skillfully navigate the environment, collect crucial evidence, and outwit the alien janitor, all while avoiding detection and counterattacks. Both sides have access to an arsenal of quirky gadgets and tools that can be used to create hilarious and unpredictable gameplay scenarios.</p>
