Added Pages : Abyssal Hunter, Added blackhole effect, fixed bug color contact

--- a/about-me.html
+++ b/about-me.html
@@ -86,7 +86,7 @@
             <div class="studies">
                 <h2>Studies</h2>
                     <h3>Master of Video Game Engineering: Gamagora - University of Lyon 2 (2023-2025)</h3>
-                        <p>Second year (ongoing)</p>
+                        <p>Second year 🎓</p>
                         <p>First year 🎓</p>
                     <h3>Erasmus - Linnæus University (Växjö, Sweden) (January 2023 - June 2023)</h3>
                         <p>Third year (second semester 🎓)</p>
