--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <div class="category">
                         <h3>Tools</h3>
                         <div class="skill">Git</div>
-                        <div class="skill">VS Code</div>
+                        <div class="skill">Rider/VS Code</div>
                         <div class="skill">Docker</div>
                     </div>
                 </div>
