--- a/projects.html
+++ b/projects.html
@@ -53,6 +53,18 @@
                 <h2>Projects</h2>
                 <div class="cards-container">
                     <div class="card">
+                        <a href ="./projects/abyssalhunter.html">
+                            <h3>Abyssal Hunter - Unity</h3>
+                            <img src="./resources/images/WIP.png" alt="">
+                            <p>Set in a mysterious abyssal world, Abyssal Hunter challenges players to <b>explore</b>, <b>survive</b>, and <b>cooperate</b> in an unforgiving environment.</p>
+                            <p class="see-more">See more...</p>
+                            <div class="technologies">
+                                <span>C#</span>
+                                <span>Unity</span>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="card">
                         <a href="./projects/npe.html">
                             <h3>W.I.P. Not Paid Enough - Gamagora Game Show</h3>
                             <img src="./resources/images/npe.png" alt="Not Paid Enough">
@@ -114,18 +126,6 @@
                             <h3>Geometrical Modelisation Quadtree - Unity</h3>
                             <img src="./resources/images/geomod.png" alt="3D volumetric representation of a sphere">
                             <p>I developed a <b>recursive algorithm</b> to create a <b>3D volumetric representation of spheres using spatial enumeration</b>. The approach involves subdividing a bounding box into smaller cubes, allowing for efficient representation and manipulation of 3D objects. The algorithm supports the addition of multiple spheres, dynamically adjusting the bounding box to encompass all objects.</p>
-                            <p class="see-more">See more...</p>
-                            <div class="technologies">
-                                <span>C#</span>
-                                <span>Unity</span>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="card">
-                        <a href ="#">
-                            <h3>W.I.P. Havoc - Unity</h3>
-                            <img src="./resources/images/WIP.png" alt="">
-                            <p>A 3D fps low poly game</p>
                             <p class="see-more">See more...</p>
                             <div class="technologies">
                                 <span>C#</span>
