--- a/projects/abyssalhunter.html
+++ b/projects/abyssalhunter.html
@@ -39,10 +39,10 @@
                     </div>
                 </div>
                     
-                <div class="illustration">
-                    <img src="../resources/images/npe.png" alt="" class="photo">
-                    <p>Illustration by : <a href="https://www.linkedin.com/in/aalyah-poncet-979b1324a/">Aalyah Poncet</a></p>
-                </div>
+<!--                <div class="illustration">-->
+<!--                    <img src="../resources/images/npe.png" alt="" class="photo">-->
+<!--                    <p>Illustration by : <a href="https://www.linkedin.com/in/aalyah-poncet-979b1324a/">Aalyah Poncet</a></p>-->
+<!--                </div>-->
                 
                 <div class="stars_animation">
                     <div id="stars"></div>
