--- a/projects/abyssalhunter.html
+++ b/projects/abyssalhunter.html
@@ -56,7 +56,7 @@
         <main>
             <h2>Abyssal Hunter</h2>
             <p>Abyssal Hunter is a multiplayer prototype developed during my internship with independent game developer Mehdi Merrouche, for my Master 2 at Gamagora (Université Lyon 2). Designed for PC with Unity, the project aims to deliver a vertical slice combining survival, crafting, and cooperative exploration mechanics in a hostile underwater setting.</p>
-             <p><b>Dont forget to check the <a href="https://www.linkedin.com/company/goober-studio/">LinkedIn</a> of our project!</b></p>
+<!--             <p><b>Dont forget to check the <a href="https://www.linkedin.com/company/goober-studio/">LinkedIn</a> of our project!</b></p>-->
             </p>
             <h3>Overview</h3>
                 <p>Set in a mysterious abyssal world, Abyssal Hunter challenges players to explore, survive, and cooperate in an unforgiving environment. Players must use their tools and ingenuity to traverse vertical spaces, gather resources, craft equipment, and overcome both environmental dangers and networked challenges. Key to the design is multiplayer cooperation: every action—from climbing and grappling to crafting gear—must be synchronized across clients to ensure smooth and engaging gameplay.</p>
